--- a/package.json
+++ b/package.json
@@ -1,36 +1,50 @@
 {
-  "name": "wisdom",
+  "name": "burak",
   "version": "1.0.0",
-  "main": "src/ndex.js",
-  "description": "this is my first nodejs project",
+  "description": "Thisis burak project backend",
+  "main": "src/server.ts",
   "scripts": {
     "start": "ts-node src/server.ts",
     "start:dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postbuild": "cp -r src/views dist/views",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "train": "nodemon train.ts"
   },
-  "author": "sherzod_dev",
+  "author": "Sherzod_dev",
   "license": "ISC",
   "dependencies": {
+    
+    "@types/jsonwebtoken": "^9.0.6",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^3.1.1",
-    "dotenv": "^16.5.0",
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.14.2",
-    "morgan": "^1.10.0"
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
+    "express-session": "^1.17.10",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "mongodb": "^3.2.6",
+    "mongoose": "^6.2.9",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/connect-mongodb-session": "^2.4.8",
+    "@types/cors": "^2.8.18",
+    "@types/bcryptjs": "2.4.6",
+    "@types/connect-mongodb-session": "^2.4.7",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.3",
-    "@types/express-session": "^1.18.2",
-    "@types/jsonwebtoken": "^9.0.10",
+    "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
-    "nodemon": "^3.1.10",
+    "@types/multer": "^1.4.11",
+    "@types/uuid": "^9.0.7",
+    "express": "^4.17.3",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
