--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "author": "Sherzod_dev",
   "license": "ISC",
   "dependencies": {
-    
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-kakao": "^1.0.3",
+    "@types/passport-local": "^1.0.38",
+    "@types/passport-naver": "^1.0.4",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
@@ -23,20 +28,26 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "express-session": "^1.17.10",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongodb": "^3.2.6",
     "mongoose": "^6.2.9",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.5",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-kakao": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.18",
     "@types/bcryptjs": "2.4.6",
     "@types/connect-mongodb-session": "^2.4.7",
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.18",
     "@types/express": "^4.17.3",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.6",
